--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Travelog</title>
 </head>
 <body>
-    
+    <!-- Основной текст -->
+    <section>
+        <div class="container">
+            <!-- Первый блок текста -->
+            <div class="row justify">
+                <div class="col-12 text-white text-uppercase mt-10">
+                    It’s A Big World <br> 
+                    There,Go <br>
+                    Explore
+                </div>
+            </div>
+            <!-- Второй блок текста -->
+            <div class="row">
+                <div class="col-12 text-white mt-10"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
