Добавил основной текст и кнопку

--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
     <section>
         <div class="container">
             <!-- Первый блок текста -->
-            <div class="row justify">
-                <div class="col-12 text-white text-uppercase mt-10">
-                    It’s A Big World <br> 
-                    There,Go <br>
-                    Explore
+            <div class="row">
+                <div class="col-12 ftext">
+                        It’s A Big World <br> 
+                        There,Go <br>
+                        Explore
                 </div>
             </div>
             <!-- Второй блок текста -->
             <div class="row">
-                <div class="col-12 text-white mt-10"></div>
+                <div class="col-12 stext">
+                    The most picturesque and jaw<br>
+                    -dropping landscape east coast<br> 
+                    state of India
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3 button"><a href="#"></a>Book Now</div>
             </div>
         </div>
     </section>
