--- a/index.html
+++ b/index.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Travelog</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-2">
+                    <img src="img/Plane.svg" alt="plane"> 
+                </div>
+
+                <div class="col-2">
+                    <h1>Travelog</h1>
+                </div>
+
+                <div class="col">
+                    <nav><a href="#">Home</a></nav> 
+                </div>
+
+                <div class="col">
+                    <nav><a href="#">About</a></nav>
+                </div>
+
+                <div class="col">
+                    <nav><a href="#">Blog</a></nav>
+                </div>
+
+                <div class="col">
+                    <nav><a href="#">Contact Us</a></nav>
+                </div>
+
+                <div class="col-2">
+                    <a class="search" href="#"><img src="img/search.svg"></a>
+                </div>
+
+                <div class="col-2">
+                    <a class="profile"><img src="img/profile.svg"></a>
+                </div>
+            </div>    
+        </div>
+    </header>
+
+
+
 </body>
 </html>
