--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-3 button"><a href="#"></a>Book Now</div>
+                <div class="col-xl-3 col-sm-6 button"><a href="#"></a>Book Now</div>
             </div>
         </div>
     </section>
