--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container_one">
             <div class="row justify-content-between">
                 <div class="col-2">
-                    <img src="img/Plane.svg" alt="plane"> 
+                    <div class="sky">
+                        <img src="img/Plane.svg" alt="plane">
+                    </div>    
                 </div>
 
                 <div class="col-2">
@@ -38,13 +40,13 @@
                 </div>
 
                 <div class="col-2">
-                    <a class="search" href="#"><img src="img/search.svg"></a>
+                    <a class="profile" href="#"><img class="loupe" src="img/profile.svg" alt="search"></a>
                 </div>
 
                 <div class="col-2">
-                    <a class="profile"><img src="img/profile.svg"></a>
+                    <a class="search" href="#"><img src="img/search.svg" alt="profile"></a>  
                 </div>
-            </div>    
+            </div>
         </div>
     </header>
 
@@ -57,7 +59,7 @@
             <div class="row">
                 <div class="col-12 ftext">
                         It’s A Big World <br> 
-                        There,Go <br>
+                        Out There,Go <br>
                         Explore
                 </div>
             </div>
