--- a/index.html
+++ b/index.html
@@ -11,16 +11,10 @@
 </head>
 <body>
     <header>
-        <div class="container_one">
-            <div class="row justify-content-between">
-                <div class="col-2">
-                    <div class="sky">
-                        <img src="img/Plane.svg" alt="plane">
-                    </div>    
-                </div>
-
-                <div class="col-2">
-                    <h1>Travelog</h1>
+        <div class="container_one mt-5 mb-5 overflow-hidden">
+            <div class="row justify-content-center">
+                <div class="col-4 text-center">
+                    <h1><img class="sky" src="img/Plane.svg" alt="plane">Travelog</h1>
                 </div>
 
                 <div class="col">
@@ -39,11 +33,11 @@
                     <nav><a href="#">Contact Us</a></nav>
                 </div>
 
-                <div class="col-2">
+                <div class="col">
                     <a class="profile" href="#"><img class="loupe" src="img/profile.svg" alt="search"></a>
                 </div>
 
-                <div class="col-2">
+                <div class="col">
                     <a class="search" href="#"><img src="img/search.svg" alt="profile"></a>  
                 </div>
             </div>
